finished updating data, now matching sources

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -1978,6 +1978,17 @@
   timestamp = {2017.06.29},
 }
 
+@Book{Borg2005,
+  title     = {Modern Multidimensional Scaling},
+  publisher = {Springer},
+  year      = {2005},
+  author    = {Borg, I. and Groenen, P. J. F.},
+  doi       = {10.1007/0-387-28981-x},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+}
+
 @Article{Borgatti1992,
   author    = {Borgatti, S. P. and Everett, M. G.},
   title     = {Regular blockmodels of multiway, multimode matrices},
@@ -2225,6 +2236,17 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.01},
+}
+
+@Book{Bruggeman2008,
+  title     = {Social Networks: An Introduction},
+  publisher = {Routledge},
+  year      = {2008},
+  author    = {Bruggeman, J.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+  url       = {https://books.google.fr/books?id=Ftidrsfi5cAC&dq=Social+Networks:+An+Introduction+Bruggeman,&lr=&source=gbs_navlinks_s},
 }
 
 @Article{Bruggeman2012,
@@ -2589,6 +2611,17 @@
   timestamp = {2017.07.03},
 }
 
+@PhdThesis{Cahoon1975,
+  author    = {Cahoon, L. J.},
+  title     = {Locating a set of points using range information only},
+  school    = {Carnegie Mellon University},
+  year      = {1975},
+  type      = {PhD thesis},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+}
+
 @InProceedings{Cai2005,
   author    = {Cai, D. and Shao, Z. and He, X. and Yan, X. and Han, J.},
   title     = {Community mining from multi-relational networks},
@@ -2928,7 +2961,7 @@
 @InProceedings{Chang2013b,
   author    = {Chang, Y.-T. and Pantazis, D.},
   title     = {Multi-view network module detection},
-  booktitle = {Asilomar Conference on Signals, Systems and Computers},
+  booktitle = {47th Asilomar Conference on Signals, Systems, and Computers},
   year      = {2013},
   pages     = {975-979},
   doi       = {10.1109/ACSSC.2013.6810435},
@@ -3802,6 +3835,19 @@
   timestamp = {2014.11.17},
 }
 
+@InCollection{Davis1977,
+  author    = {Davis, J. A.},
+  title     = {Clustering and Structural Balance in Graphs},
+  booktitle = {Social Networks: A Developping Paradigm},
+  publisher = {Elsevier},
+  year      = {1977},
+  pages     = {27-33},
+  doi       = {10.1016/b978-0-12-442450-0.50009-2},
+  groups    = {Structural Balance / Correlation Clustering, Just balance, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+}
+
 @Book{Dawkins1989,
   title     = {The Selfish Gene},
   publisher = {Oxford University},
@@ -3955,6 +4001,17 @@
   timestamp = {2017.06.28},
 }
 
+@Book{Deo1974,
+  title     = {Graph theory with applications to engineering and computer science},
+  publisher = {Prentice-Hall},
+  year      = {1974},
+  author    = {Deo, N.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+  url       = {http://dl.acm.org/citation.cfm?id=1096898},
+}
+
 @Article{Desai1994,
   author    = {Desai, M. and Rao, V.},
   title     = {A characterization of the smallest eigenvalue of a graph},
@@ -3968,6 +4025,17 @@
   groups    = {Laplacian, Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.27},
+}
+
+@InProceedings{Desposato1997,
+  author    = {Desposato, S. W.},
+  title     = {Party Switching and Democratization in Brazil},
+  booktitle = {Meeting of the Latin American Studies Association},
+  year      = {1997},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+  url       = {http://biblioteca.clacso.edu.ar/ar/libros/lasa97/desposato.pdf},
 }
 
 @InProceedings{Dev2014b,
@@ -4349,6 +4417,17 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2010.12.19},
+}
+
+@Book{Downs1957,
+  title     = {An Economic Theory of Democracy},
+  publisher = {Harper},
+  year      = {1957},
+  author    = {Downs, A.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+  url       = {http://polisci2.ucsd.edu/foundation/documents/06Downs1957.pdf},
 }
 
 @Article{Drineas2006,
@@ -5695,6 +5774,17 @@
   timestamp = {2010.06.03},
 }
 
+@Book{Gifi1990,
+  title     = {Nonlinear Multivariate Analysis},
+  publisher = {John Wiley \& Sons},
+  year      = {1990},
+  author    = {Gifi, A.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+  url       = {http://eu.wiley.com/WileyCDA/WileyTitle/productCd-0471926205.html},
+}
+
 @Article{Giles1986,
   author    = {Giles, M. W. and Evans, A.},
   title     = {The Power Approach to Intergroup Hostility},
@@ -5998,6 +6088,28 @@
   owner     = {Vincent},
   review    = {alt. doi: 10.2307/2281536},
   timestamp = {2017.03.25},
+}
+
+@Book{Gower1995,
+  title     = {Biplots},
+  publisher = {Chapman \& Hall/CRC},
+  year      = {1995},
+  author    = {Gower, J. C. and Hand, D. J.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+  url       = {https://www.crcpress.com/Biplots/Gower-Hand/p/book/9780412716300},
+}
+
+@Book{Gower2011,
+  title     = {Understanding Biplots},
+  publisher = {John Wiley \& Sons},
+  year      = {2011},
+  author    = {Gower, J. C. and Lubbe, S. G. and Le Roux, N.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+  url       = {http://eu.wiley.com/WileyCDA/WileyTitle/productCd-0470012552.html},
 }
 
 @InProceedings{Grabowicz2013,
@@ -6775,6 +6887,20 @@
   timestamp = {2017.06.30},
 }
 
+@Article{Hensel2000,
+  author    = {Hensel, P. R. and Goertz, G. and Diehl, P. F.},
+  title     = {The Democratic Peace and Rivalries},
+  journal   = {Journal of Politics},
+  year      = {2000},
+  volume    = {62},
+  number    = {4},
+  pages     = {1173-1188},
+  doi       = {10.1111/0022-3816.00052},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+}
+
 @Article{Hidalgo2007,
   author    = {Hidalgo, C. A. and Klinger, B. and Barabasi, A.-L. and Hausmann, R.},
   title     = {The Product Space Conditions the Development of Nations},
@@ -6811,6 +6937,20 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.16},
+}
+
+@InCollection{Hirsch2006,
+  author    = {Hirsch, M. W. and Smith, H.},
+  title     = {Monotone Dynamical Systems},
+  booktitle = {Handbook of Differential Equations: Ordinary Differential Equations},
+  publisher = {Elsevier},
+  year      = {2006},
+  chapter   = {4},
+  pages     = {239-357},
+  doi       = {10.1016/s1874-5725(05)80006-9},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
 }
 
 @Article{Hochbaum1986,
@@ -8100,6 +8240,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.07.03},
 }
 
+@Article{Kim1996,
+  author    = {Kim, S. Y. and Russett, B.},
+  title     = {The New Politics of Voting Alignments in the United Nations General Assembly},
+  journal   = {International Organization},
+  year      = {1996},
+  volume    = {50},
+  number    = {4},
+  pages     = {629-652},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+  url       = {http://www.jstor.org/stable/2704240},
+}
+
 @Article{Kim2005a,
   author        = {Kim, D.-H. and Jeong, H.},
   title         = {Systematic analysis of group identification in stock markets},
@@ -8110,6 +8264,18 @@ old title: The map equation and the resolution limit in community detection},
   __markedentry = {[Vincent:]},
   doi           = {10.1103/physreve.72.046133},
   timestamp     = {2017.06.28},
+}
+
+@InProceedings{Kim2011,
+  author    = {Kim, J. and Hwang, I. and Kim, Y.-H. and Moon, B.-R.},
+  title     = {Genetic approaches for graph partitioning: a survey},
+  booktitle = {13th annual conference on Genetic and evolutionary computation},
+  year      = {2011},
+  doi       = {10.1145/2001576.2001642},
+  file      = {:Genetic approaches for graph partitioning- a survey .pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
 }
 
 @InProceedings{Kim2011a,
@@ -8138,6 +8304,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.28},
+}
+
+@Article{Kirchhoff1847,
+  author    = {Kirchhoff, G.},
+  title     = {Ueber die Auflösung der Gleichungen, auf welche man bei der Untersuchung der linearen Vertheilung galvanischer Ströme geführt wird},
+  journal   = {Annalen der Physik und Chemie},
+  year      = {1847},
+  volume    = {148},
+  number    = {12},
+  pages     = {497-508},
+  doi       = {10.1002/andp.18471481202},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
 }
 
 @Article{Kirkpatrick1983,
@@ -8183,6 +8363,17 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.27},
+}
+
+@Book{Kissinger1994,
+  title     = {Diplomacy},
+  publisher = {Simon \& Schuster},
+  year      = {1994},
+  author    = {Kissinger, H.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+  url       = {https://books.google.fr/books/about/Diplomacy.html?id=VPHQMG3Ue1wC&redir_esc=y},
 }
 
 @Article{Kitsak2010,
@@ -9011,6 +9202,33 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.01},
+}
+
+@InCollection{Leeuw2005,
+  author    = {de Leeuw, J.},
+  title     = {Principal component analysis of Senate voting patterns},
+  booktitle = {Real Data Analysis},
+  publisher = {Information Age Publishing},
+  year      = {2005},
+  editor    = {Sawilowski, S.},
+  pages     = {405-411},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+  url       = {http://escholarship.org/uc/item/3xm9z62w},
+}
+
+@Article{Leeuw2009,
+  author    = {de Leeuw, J. and Mair, P.},
+  title     = {Gifi Methods for Optimal Scaling in R: The Package homals},
+  journal   = {Journal of Statistical Software},
+  year      = {2009},
+  volume    = {31},
+  number    = {4},
+  doi       = {10.18637/jss.v031.i04},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
 }
 
 @Article{Leicht2006,
@@ -10706,6 +10924,20 @@ old title: The map equation and the resolution limit in community detection},
   url       = {https://global.oup.com/academic/product/information-physics-and-computation-9780198570837},
 }
 
+@Article{Michailidis1998,
+  author    = {Michailidis, G. and de Leeuw, J.},
+  title     = {The Gifi system of descriptive multivariate analysis},
+  journal   = {Statistical Science},
+  year      = {1998},
+  volume    = {13},
+  number    = {4},
+  pages     = {307-336},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+  url       = {http://www.jstor.org/stable/2676814},
+}
+
 @Article{Michel2010,
   author    = {Michel, J.-B. and Shen, Y. K. and Aiden, A. P. and Veres, A. and Gray, M. K. and Pickett, J. P. and Hoiberg, D. and Clancy, D. and Norvig, P. and Orwant, J. and Pinker, S. and Nowak, M. A. and Aiden, E. L.},
   title     = {Quantitative Analysis of Culture Using Millions of Digitized Books},
@@ -10742,6 +10974,20 @@ old title: The map equation and the resolution limit in community detection},
   owner     = {Vincent},
   timestamp = {2017.07.16},
   url       = {http://dl.acm.org/citation.cfm?id=1983675},
+}
+
+@Article{Milgram1967,
+  author    = {Milgram, S.},
+  title     = {The small world problem},
+  journal   = {Psychology Today},
+  year      = {1967},
+  volume    = {2},
+  pages     = {60-67},
+  file      = {:The Small World Problem.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2012.03.27},
+  url       = {http://measure.igpp.ucla.edu/GK12-SEE-LA/Lesson_Files_09/Tina_Wey/TW_social_networks_Milgram_1967_small_world_problem.pdf:},
 }
 
 @InProceedings{Miller2009,
@@ -11700,6 +11946,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2012.05.01},
 }
 
+@Article{Orman2009,
+  author    = {Orman, G. K. and Labatut, V.},
+  title     = {A Comparison of Community Detection Algorithms on Artificial Networks},
+  journal   = {Lecture Notes in Artificial Intelligence},
+  year      = {2009},
+  volume    = {5808},
+  pages     = {242-256},
+  doi       = {10.1007/978-3-642-04747-3_20},
+  file      = {:A Comparison of Community Detection Algorithms on Artificial Networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+}
+
 @Article{Orman2012a,
   author    = {Orman, G. K. and Labatut, V. and Cherifi, H.},
   title     = {Comparative Evaluation of Community Detection Algorithms: A Topological Approach},
@@ -11947,6 +12207,17 @@ old title: The map equation and the resolution limit in community detection},
   url       = {https://global.oup.com/academic/product/ecological-networks-9780195188165},
 }
 
+@InProceedings{Pasquier1999,
+  author    = {Pasquier, N. and Bastide, Y. and Taouil, R. and Lakhal, L.},
+  title     = {Discovering frequent closed itemsets for association rules},
+  booktitle = {7th International Conference on Database Theory},
+  year      = {1999},
+  pages     = {398-416},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+  url       = {http://dl.acm.org/citation.cfm?id=645503.656256},
+}
+
 @Book{Pastor-Satorras2004,
   title     = {Evolution and structure of the Internet: a statistical physics approach},
   publisher = {Cambridge University Press},
@@ -11957,6 +12228,20 @@ old title: The map equation and the resolution limit in community detection},
   owner     = {Vincent},
   timestamp = {2010.06.03},
   url       = {http://dl.acm.org/citation.cfm?id=1534810},
+}
+
+@InCollection{Paul2004,
+  author    = {Paul, T. V.},
+  title     = {The enduring axioms of balance of power theory},
+  booktitle = {Balance of Power: Theory and Practice in the 21st Century},
+  publisher = {Stanford University Press},
+  year      = {2004},
+  editor    = {Paul, T. V. and Wirtz, J. J. and Fortman, M.},
+  pages     = {1-25},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+  url       = {http://www.hiunpar.org/wp-content/uploads/2015/10/Balance-of-Power-Theory-and-Practive-in-the-21st-Century.pdf},
 }
 
 @Article{Peixoto2013a,
@@ -12151,6 +12436,17 @@ old title: The map equation and the resolution limit in community detection},
   url       = {https://eh.net/book_reviews/congress-a-political-economic-history-of-roll-call-voting/},
 }
 
+@Book{Poole2005,
+  title     = {Spatial Models of Parliamentary Voting},
+  publisher = {Cambridge University Press},
+  year      = {2005},
+  author    = {Poole, K. T.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+  url       = {https://www.cambridge.org/catalogue/catalogue.asp?isbn=9780521617475},
+}
+
 @Electronic{Poole2011,
   author       = {Poole, K. T.},
   year         = {2011},
@@ -12160,6 +12456,18 @@ old title: The map equation and the resolution limit in community detection},
   groups       = {Datasets, Ignored},
   owner        = {Vincent},
   timestamp    = {2017.04.21},
+}
+
+@Article{Poole2011a,
+  author    = {Poole, K. T. and Lewis, J. B. and Lo, J. and Carroll, R.},
+  title     = {Scaling roll call votes with w-nominate},
+  journal   = {Journal of Statistical Software},
+  year      = {2011},
+  volume    = {42},
+  number    = {14},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+  url       = {https://www.jstatsoft.org/article/view/v042i14},
 }
 
 @Article{Poria2013,
@@ -12246,6 +12554,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.16},
+}
+
+@Article{Prim1957,
+  author    = {Prim, R. C.},
+  title     = {Shortest Connection Networks And Some Generalizations},
+  journal   = {Bell System Technical Journal},
+  year      = {1957},
+  volume    = {36},
+  number    = {6},
+  pages     = {1389-1401},
+  doi       = {10.1002/j.1538-7305.1957.tb01515.x},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
 }
 
 @Article{Proudford2003,
@@ -12702,6 +13024,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.28},
+}
+
+@Article{RodrguezGonzlez2010,
+  author    = {Rodriguez-Gonzalez, A. Y. and Martinez-Trinidad, J. F. and Carrasco-Ochoa, J. A. and Ruiz-Shulcloper, J.},
+  title     = {RP-Miner: a relaxed prune algorithm for frequent similar pattern mining},
+  journal   = {Knowledge and Information Systems},
+  year      = {2010},
+  volume    = {27},
+  number    = {3},
+  pages     = {451-471},
+  doi       = {10.1007/s10115-010-0309-9},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
 }
 
 @Book{Roethlisberger1939,
@@ -13819,6 +14155,20 @@ old title: The map equation and the resolution limit in community detection},
   url       = {https://archive.org/details/cbarchive_33927_astatisticalmethodforevaluatin1902},
 }
 
+@Article{Sol1994,
+  author    = {Solé, P. and Zaslavsky, T.},
+  title     = {A Coding Approach to Signed Graphs},
+  journal   = {SIAM Journal on Discrete Mathematics},
+  year      = {1994},
+  volume    = {7},
+  number    = {4},
+  pages     = {544-553},
+  doi       = {10.1137/s0895480189174374},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+}
+
 @Article{Solomon2000,
   author    = {Solomon, S. and Weisbuch, G. and de Arcangelis, L. and Jan, N. and Stauffer, D.},
   title     = {Social percolation models},
@@ -14442,7 +14792,7 @@ old title: The map equation and the resolution limit in community detection},
 @InProceedings{Terzi2011,
   author        = {Terzi, E. and Winkler, M.},
   title         = {A spectral algorithm for computing social balance},
-  booktitle     = {International Workshop on Algorithms and Models for the Web-Graph},
+  booktitle     = {8th International Workshop on Algorithms and Models for the Web-Graph},
   year          = {2011},
   volume        = {6732},
   series        = {Lecture Notes in Computer Science},
@@ -14493,6 +14843,17 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.02},
+}
+
+@Book{Tocqueville1840,
+  title     = {De la démocratie en Amérique},
+  publisher = {Saunders and Otley},
+  year      = {1840},
+  author    = {de Tocqueville, A.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+  url       = {http://xroads.virginia.edu/~HYPER/DETOC/home.html},
 }
 
 @Article{Tolsma2009,
@@ -16099,6 +16460,18 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.06.30},
 }
 
+@InProceedings{Zaki2002,
+  author    = {Zaki, M. J. and Hsiao, C.-J.},
+  title     = {CHARM: An Efficient Algorithm for Closed Itemset Mining},
+  booktitle = {SIAM International Conference on Data Mining},
+  year      = {2002},
+  pages     = {457-473},
+  doi       = {10.1137/1.9781611972726.27},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+}
+
 @Article{Zaslavsky1981,
   author    = {Zaslavsky, T.},
   title     = {Characterizations of signed graphs},
@@ -16166,6 +16539,17 @@ old title: The map equation and the resolution limit in community detection},
   owner         = {Vincent},
   timestamp     = {2017.05.03},
   url           = {http://people.math.binghamton.edu/zaslav/Tpapers/balance-clusterability.slides.20100726.pdf},
+}
+
+@InProceedings{Zaversnik2004,
+  author    = {Zaversnik, M. and Batagelj, V.},
+  title     = {Islands},
+  booktitle = {XXIV International Sunbelt Social Network Conference},
+  year      = {2004},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
+  url       = {http://vlado.fmf.uni-lj.si/pub/networks/Doc/Sunbelt/islands.pdf},
 }
 
 @Article{Zelazo2017,
@@ -16520,6 +16904,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@InProceedings{Zitzler1998,
+  author    = {Zitzler, E. and Thiele, L.},
+  title     = {Multiobjective optimization using evolutionary algorithms - A comparative case study},
+  booktitle = {International Conference on Parallel Problem Solving from Nature},
+  year      = {1998},
+  volume    = {1498},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {292--301},
+  doi       = {10.1007/bfb0056872},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.17},
 }
 
 @Article{Zitzler1999,
