adding manually processed papers

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -1668,6 +1668,21 @@
   url       = {https://searchworks.stanford.edu/view/10027339},
 }
 
+@Article{Berry2011,
+  author    = {Berry, J. W. and Hendrickson, B. and LaViolette, R. A. and Phillips, C. A.},
+  title     = {Tolerating the community detection resolution limit with edge weighting},
+  journal   = {Physical Review E},
+  year      = {2011},
+  volume    = {83},
+  number    = {5},
+  pages     = {056119},
+  doi       = {10.1103/PhysRevE.83.056119},
+  file      = {:Tolerating the community detection resolution limit with edge weighting.pdf:PDF},
+  groups    = {Graph Partitioning},
+  owner     = {Vincent},
+  timestamp = {2012.07.29},
+}
+
 @InProceedings{Beyene2008,
   author    = {Beyene, Y. and Faloutsos, M. and Chau, D. H. and Faloutsos, C.},
   title     = {The eBay graph: How do online auction users interact?},
@@ -1822,6 +1837,21 @@
 }
 
 @Article{Boettcher2001,
+  author    = {Boettcher, S. and Percus, A. G.},
+  title     = {Extremal optimization for graph partitioning},
+  journal   = {Physical Review E},
+  year      = {2001},
+  volume    = {64},
+  number    = {2},
+  pages     = {026114},
+  doi       = {10.1103/PhysRevE.64.026114},
+  file      = {:Extremal optimization for graph partitioning.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2012.08.01},
+}
+
+@Article{Boettcher2001a,
   author    = {Boettcher, S. and Percus, A. G.},
   title     = {Optimization with Extremal Dynamics},
   journal   = {Physical Review Letters},
@@ -2080,6 +2110,20 @@
   groups    = {Graph Partitioning},
   owner     = {Vincent},
   timestamp = {2017.06.29},
+}
+
+@Article{Brandes2007,
+  author    = {Brandes, U. and Delling, D. and Gaertler, M. and Görke, R. and Hoefer, M. and Nikoloski, Z. and Wagner, D.},
+  title     = {On finding graph clusterings with maximum modularity},
+  journal   = {Lecture Notes in Computer Science},
+  year      = {2007},
+  volume    = {4769},
+  pages     = {121-132},
+  doi       = {10.1007/978-3-540-74839-7_12},
+  file      = {:On Finding Graph Clusterings with Maximum Modularity.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2012.08.17},
 }
 
 @Article{Brandes2008a,
@@ -3102,6 +3146,21 @@
   timestamp     = {2017.05.08},
 }
 
+@Article{Chen2010g,
+  author        = {Chen, D. and Shang, M. and Lv, Z. and Fu, Y.},
+  title         = {Detecting overlapping communities of weighted networks via a local algorithm},
+  journal       = {Physica A},
+  year          = {2010},
+  volume        = {389},
+  number        = {19},
+  pages         = {4177-4187},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1016/j.physa.2010.05.046},
+  file          = {:Detecting overlapping communities of weighted networks via a local algorithm.pdf:PDF},
+  owner         = {Vincent},
+  timestamp     = {2017.07.20},
+}
+
 @Article{Chen2012,
   author    = {Chen, L. and Chai, Y. and Wu, R. and Sun, J. and Ma, T.},
   title     = {Cluster synchronization in fractional-order complex dynamical networks},
@@ -3525,6 +3584,21 @@
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.30},
+}
+
+@Article{Condon2001,
+  author    = {Condon, A. and Karp, R. M.},
+  title     = {Algorithms for graph partitioning on the planted partition model},
+  journal   = {Random Structures and Algorithms},
+  year      = {2001},
+  volume    = {18},
+  number    = {2},
+  pages     = {116-140},
+  doi       = {10.1007/978-3-540-48413-4_23},
+  file      = {:Algorithms for Graph Partitioning on the Planted Partition Model.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
 }
 
 @Book{Cook2006,
@@ -5436,6 +5510,21 @@
   timestamp = {2010.08.05},
 }
 
+@Article{Frey2007,
+  author    = {Frey, B. J. and Dueck, D.},
+  title     = {Clustering by passing messages between data points},
+  journal   = {Science},
+  year      = {2007},
+  volume    = {315},
+  number    = {5814},
+  pages     = {972-976},
+  doi       = {10.1126/science.1136800},
+  file      = {:Clustering by Passing Messages Between Data Points.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2016.01.05},
+}
+
 @Article{Friedkin1991,
   author    = {Friedkin, N. E.},
   title     = {Theoretical Foundations for Centrality Measures},
@@ -5896,6 +5985,20 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.02},
+}
+
+@Article{Goebel1974,
+  author    = {Göbel, F. and Jagers, A. A.},
+  title     = {Random walks on graphs},
+  journal   = {Stochastic Processes and their Applications},
+  year      = {1974},
+  volume    = {2},
+  number    = {4},
+  pages     = {311-336},
+  doi       = {10.1016/0304-4149(74)90001-5},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.20},
 }
 
 @Article{Goemans1995,
@@ -7143,6 +7246,17 @@
   timestamp = {2017.07.12},
 }
 
+@InProceedings{Horowitz2010,
+  author    = {Horowitz, D. and Kamvar, S. D.},
+  title     = {The anatomy of a large-scale social search engine},
+  booktitle = {19th international conference on World Wide Web},
+  year      = {2010},
+  doi       = {10.1145/1772690.1772735},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.20},
+}
+
 @Article{Hotelling1929,
   author    = {Hotelling, H.},
   title     = {Stability in Competition},
@@ -8048,7 +8162,7 @@
   volume    = {physics.data-an},
   pages     = {0801.3290},
   file      = {:A dual assortative measure of community structure.pdf:PDF},
-  groups    = {Not Found},
+  groups    = {Done Manually},
   owner     = {Vincent},
   timestamp = {2012.07.28},
   url       = {http://arxiv.org/abs/0801.3290},
@@ -9658,6 +9772,21 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2013.05.28},
 }
 
+@Article{Li2013k,
+  author    = {Li, J. and Wang, X. and Eustace, J.},
+  title     = {Detecting overlapping communities by seed community in weighted complex networks},
+  journal   = {Physica A},
+  year      = {2013},
+  volume    = {392},
+  number    = {23},
+  pages     = {6125-6134},
+  doi       = {10.1016/j.physa.2013.07.066},
+  file      = {:Detecting overlapping communities by seed community in weighted complex networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2013.08.13},
+}
+
 @Article{Li2013l,
   author    = {Li, Y. and Wang, H. and Li, J. and Gao, H.},
   title     = {Efficient Community Detection with Additive Constrains on Large Networks},
@@ -10262,6 +10391,21 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.01},
+}
+
+@Article{Ma2010a,
+  author    = {Ma, X. and Gao, L. and Yong, X. and Fu, L.},
+  title     = {Semi-supervised clustering algorithm for community structure detection in complex networks},
+  journal   = {Physica A},
+  year      = {2010},
+  volume    = {389},
+  number    = {1},
+  pages     = {187-197},
+  doi       = {10.1016/j.physa.2009.09.018},
+  file      = {:Semi-supervised clustering algorithm for community structure detection in complex networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.09.08},
 }
 
 @Article{Ma2013a,
@@ -11547,6 +11691,35 @@ old title: The map equation and the resolution limit in community detection},
   pages     = {026118},
   doi       = {10.1103/PhysRevE.64.026118},
   file      = {:Random graphs with arbitrary degree distributions and their applications.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+}
+
+@Article{Newman2002,
+  author    = {Newman, M. E. J.},
+  title     = {Assortative Mixing in Networks},
+  journal   = {Physical Review Letters},
+  year      = {2002},
+  volume    = {89},
+  number    = {20},
+  pages     = {208701},
+  doi       = {10.1103/PhysRevLett.89.208701},
+  file      = {:Assortative Mixing in Networks.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+}
+
+@Article{Newman2003a,
+  author    = {Newman, M. E. J.},
+  title     = {Mixing patterns in networks},
+  journal   = {Physical Review E},
+  year      = {2003},
+  volume    = {67},
+  pages     = {026126},
+  doi       = {10.1103/PhysRevE.67.026126},
+  file      = {:Mixing patterns in networks.pdf:PDF},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2010.06.03},
@@ -13223,6 +13396,21 @@ old title: The map equation and the resolution limit in community detection},
   timestamp     = {2017.06.08},
 }
 
+@Article{Ruan2008,
+  author    = {Ruan, J. and Zhang, W.},
+  title     = {Identifying network communities with a high resolution},
+  journal   = {Physical Review E},
+  year      = {2008},
+  volume    = {77},
+  number    = {1},
+  pages     = {016104},
+  doi       = {10.1103/PhysRevE.77.016104},
+  file      = {:Identifying network communities with a high resolution.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2012.07.29},
+}
+
 @Article{Rubinov2010,
   author    = {Rubinov, M. and Sporns, O.},
   title     = {Complex network measures of brain connectivity: Uses and interpretations},
@@ -14517,6 +14705,19 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2012.07.27},
 }
 
+@Article{Sun2009a,
+  author    = {Sun, D. and Zhou, T. and Liu, J.-G. and Liu, R.-R. and Jia, C.-X. and Wang, B.-H.},
+  title     = {Information filtering based on transferring similarity},
+  journal   = {Physical Review E},
+  year      = {2009},
+  volume    = {80},
+  number    = {1},
+  doi       = {10.1103/physreve.80.017101},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.20},
+}
+
 @Article{Sun2013a,
   author    = {Sun, P. G.},
   title     = {Weighting links based on edge centrality for community detection},
@@ -15360,6 +15561,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp     = {2017.06.04},
 }
 
+@Article{Vlasblom2009,
+  author    = {Vlasblom, J. and Wodak, S. J.},
+  title     = {Markov clustering versus affinity propagation for the partitioning of protein interaction graphs},
+  journal   = {BMC Bioinformatics},
+  year      = {2009},
+  volume    = {10},
+  number    = {1},
+  pages     = {99},
+  doi       = {10.1186/1471-2105-10-99},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.20},
+}
+
 @Article{Voeten2000,
   author    = {Voeten, E.},
   title     = {Clashes in the Assembly},
@@ -15484,6 +15699,48 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.15},
+}
+
+@Article{Wang2007,
+  author    = {Wang, X. and Chen, G. and Lu, H.},
+  title     = {A very fast algorithm for detecting community structures in complex networks},
+  journal   = {Physica A},
+  year      = {2007},
+  volume    = {384},
+  number    = {2},
+  pages     = {667-674},
+  doi       = {10.1016/j.physa.2007.05.013},
+  file      = {:A very fast algorithm for detecting community structures in complex networks.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2012.08.31},
+}
+
+@Article{Wang2012,
+  author    = {Wang, B. and Gao, L. and Gao, Y.},
+  title     = {Control range: a controllability-based index for node significance in directed networks},
+  journal   = {Journal of Statistical Mechanics},
+  year      = {2012},
+  volume    = {2012},
+  number    = {4},
+  pages     = {P04011},
+  doi       = {10.1088/1742-5468/2012/04/p04011},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.20},
+}
+
+@Article{Wang2012z,
+  author    = {Wang, Y. and Gao, L.},
+  title     = {Detecting Protein Complexes by an Improved Affinity Propagation Algorithm in Protein-Protein Interaction Networks},
+  journal   = {Journal of Computers},
+  year      = {2012},
+  volume    = {7},
+  number    = {7},
+  doi       = {10.4304/jcp.7.7.1761-1768},
+  file      = {:Detecting Protein Complexes by an Improved Affinity Propagation Algorithm in Protein-Protein Interaction Networks.pdf:PDF},
+  groups    = {Graph Partitioning},
+  owner     = {Vincent},
+  timestamp = {2017.07.20},
 }
 
 @Article{Wang2013t,
@@ -16325,6 +16582,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.06.15},
 }
 
+@Article{Yen2011,
+  author    = {Yen, L. and Saerens, M. and Fouss, F.},
+  title     = {A Link Analysis Extension of Correspondence Analysis for Mining Relational Databases},
+  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  year      = {2011},
+  volume    = {23},
+  number    = {4},
+  pages     = {481-495},
+  doi       = {10.1109/tkde.2010.142},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.20},
+}
+
 @InCollection{Ying2009,
   author    = {Ying, X. and Wu, X.},
   title     = {On Randomness Measures for Social Networks},
@@ -16692,6 +16963,21 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.07.14},
 }
 
+@InCollection{Zhang2008,
+  author    = {Zhang, X. and Furtlehner, C. and Sebag, M.},
+  title     = {Data Streaming with Affinity Propagation},
+  booktitle = {Joint European Conference on Machine Learning and Knowledge Discovery in Databases},
+  publisher = {Springer},
+  year      = {2008},
+  volume    = {5212},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {628--643},
+  doi       = {10.1007/978-3-540-87481-2_41},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.20},
+}
+
 @Article{Zhang2008b,
   author    = {Zhang, Y. and Friend, A. J. and Traud, A. L. and Porter, M. A. and Fowler, J. H. and Mucha, P. J.},
   title     = {Community structure in congressional cosponsorship networks},
@@ -16881,6 +17167,21 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.07.03},
 }
 
+@Article{Zhou2009a,
+  author    = {Zhou, T. and Lü, L. and Zhang, Y.-C.},
+  title     = {Predicting missing links via local information},
+  journal   = {European Physical Journal B},
+  year      = {2009},
+  volume    = {71},
+  number    = {4},
+  pages     = {623-630},
+  doi       = {10.1140/epjb/e2009-00335-8},
+  file      = {:Predicting missing links via local information.pdf:PDF},
+  groups    = {Node Similarity/Distance},
+  owner     = {Vincent},
+  timestamp = {2016.09.27},
+}
+
 @InProceedings{Zhou2011a,
   author    = {Zhou, Z. and Shi, Y.},
   title     = {Inertia Weight Adaption in Particle Swarm Optimization Algorithm},
@@ -17004,6 +17305,7 @@ old title: The map equation and the resolution limit in community detection},
 1 ExplicitGroup:_Biblionet\;2\;;
 2 ExplicitGroup:_To do\;0\;;
 2 ExplicitGroup:Found\;0\;;
+2 ExplicitGroup:Done Manually\;0\;;
 2 ExplicitGroup:Not Found\;0\;;
 2 ExplicitGroup:Ignored\;0\;;
 }
