adding manually processed papers

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -6481,7 +6481,7 @@
   pages     = {508-519},
   doi       = {10.1016/j.physa.2015.12.037},
   file      = {:A general method of community detection by identifying community centers with affinity propagation.pdf:PDF},
-  groups    = {Not Found},
+  groups    = {Done Manually},
   owner     = {Vincent},
   timestamp = {2016.01.02},
 }
